# ppl.nn

cmake/: deps.cmake  x86.cmake
include/ppl/nn/runtime/: tensor.h
src/ppl/nn/common/: buffer_info.cc  buffer_info.h  constant_visitor.h  data_converter.h  device.h  tensor_buffer_info.h
src/ppl/nn/engines/: utils.cc  utils.h
src/ppl/nn/engines/arm/: arm_device.h  data_converter.cc  data_converter.h
src/ppl/nn/engines/arm/impls/include/ppl/kernel/arm_server/conv2d/neon/: conv2d.h
src/ppl/nn/engines/arm/impls/include/ppl/kernel/arm_server/fc/neon/: fc.h
src/ppl/nn/engines/arm/impls/include/ppl/kernel/arm_server/resize2d/neon/: resize2d.h
src/ppl/nn/engines/arm/impls/src/ppl/kernel/arm_server/conv2d/neon/: conv2d_common.cpp
src/ppl/nn/engines/arm/impls/src/ppl/kernel/arm_server/conv2d/neon/fp16/depthwise/: conv2d_n8cx_depthwise_fp16.cpp  conv2d_n8cx_depthwise_fp16.h
src/ppl/nn/engines/arm/impls/src/ppl/kernel/arm_server/conv2d/neon/fp16/direct/: conv2d_n8cx_direct_fp16.cpp  conv2d_n8cx_direct_fp16.h
src/ppl/nn/engines/arm/impls/src/ppl/kernel/arm_server/conv2d/neon/fp16/direct_ndarray/: conv2d_direct_ndarray_fp16.cpp  conv2d_direct_ndarray_fp16.h
src/ppl/nn/engines/arm/impls/src/ppl/kernel/arm_server/resize2d/neon/: resize2d.cpp
src/ppl/nn/engines/arm/kernels/onnx/: concat_kernel.cc  concat_kernel.h  split_kernel.cc
src/ppl/nn/engines/arm/kernels/pmx/: reorder_kernel.h
src/ppl/nn/engines/arm/optimizer/: opt_graph.cc
src/ppl/nn/engines/arm/optimizer/ops/onnx/: reduce_max_op.cc  reduce_mean_op.cc  reduce_min_op.cc  reduce_prod_op.cc  reduce_sum_op.cc
src/ppl/nn/engines/arm/optimizer/rules/: fuse_arithmetic_relu.cc  fuse_channel_shuffle.cc
src/ppl/nn/engines/common/onnx/: split_to_sequence_kernel.cc
src/ppl/nn/engines/cuda/: cuda_device.cc  cuda_device.h  data_converter.cc  data_converter.h  engine.cc
src/ppl/nn/engines/cuda/impls/: CMakeLists.txt
src/ppl/nn/engines/cuda/impls/include/cudakernel/gemm/: bgemm.h  gemm.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/nn/: convtranspose.h  deform_conv.h  lstm.h  mmcv_nms.h  nms.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/reduce/: argmax.h  argmin.h  reduce.h  reduce_helper.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/reformat/: reformat.h
src/ppl/nn/engines/cuda/impls/src/nn/: bgemm.cu  convtranspose.cu  deform_conv.cu  gemm.cu  gemm_int8.cu  lstm.cu  mmcv_nms.cu  nms.cu
src/ppl/nn/engines/cuda/impls/src/reduce/: reduce.cu  reduce_helper.cu
src/ppl/nn/engines/cuda/impls/src/reformat/: cvt_format_type.cu  reformat.cu
src/ppl/nn/engines/cuda/kernels/mmcv/: mmcv_modulated_deform_conv2d_kernel.cc
src/ppl/nn/engines/cuda/kernels/onnx/: argmax_kernel.cc  argmin_kernel.cc  avepooling_kernel.cc  concat_kernel.cc  conv_depthwise_kernel.cc  conv_hmma_kernel.cc  conv_imma_kernel.cc  gemm_kernel.cc  lstm_kernel.cc  matmul_kernel.cc  prelu_kernel.cc  reduce_l2_kernel.cc  resize_kernel.cc  slice_kernel.cc  split_kernel.cc  topk_kernel.cc  transpose_kernel.cc
src/ppl/nn/engines/cuda/kernels/pmx/: reduce_kernel.cc
src/ppl/nn/engines/cuda/optimizer/: opt_graph.cc  opt_kernel.h
src/ppl/nn/engines/cuda/optimizer/algos/: algo_bridge.cc  algo_concat.cc  algo_conv_depthwise.cc  algo_conv_depthwise_int8.cc  algo_conv_hmma.cc  algo_conv_imma.cc  algo_convtranspose.cc  algo_deform_conv.cc  algo_gemm.cc  algo_graph.cc  algo_matmul.cc
src/ppl/nn/engines/cuda/optimizer/fusions/: fs_concat.cc  fs_conv.h
src/ppl/nn/engines/cuda/optimizer/ops/onnx/: pad_op.cc  reshape_op.cc  resize_op.cc  slice_op.cc  tile_op.cc  transpose_op.cc
src/ppl/nn/engines/cuda/params/: conv_extra_param.cc  conv_extra_param.h
src/ppl/nn/engines/riscv/: data_converter.cc  data_converter.h  riscv_device.h
src/ppl/nn/engines/riscv/kernels/onnx/: concat_kernel.h  split_kernel.cc
src/ppl/nn/engines/riscv/kernels/pmx/: reorder_kernel.h
src/ppl/nn/engines/riscv/optimizer/ops/onnx/conv/: conv_op.h
src/ppl/nn/engines/riscv/optimizer/rules/: fuse_channel_shuffle.cc
src/ppl/nn/engines/x86/: data_converter.cc  data_converter.h  kernel.cc  utils.h  x86_device.h
src/ppl/nn/engines/x86/impls/: CMakeLists.txt
src/ppl/nn/engines/x86/impls/cmake/: deps.cmake
src/ppl/nn/engines/x86/impls/include/ppl/kernel/x86/fp32/: gru.h  lstm.h  matmul.h
src/ppl/nn/engines/x86/impls/src/ppl/kernel/x86/fp32/conv/: conv_fp32.cpp
src/ppl/nn/engines/x86/impls/src/ppl/kernel/x86/fp32/gru/: gru_fp32.cpp  gru_fp32_avx512.cpp  gru_fp32_fma.cpp
src/ppl/nn/engines/x86/impls/src/ppl/kernel/x86/fp32/lstm/: lstm_fp32.cpp  lstm_fp32_avx512.cpp  lstm_fp32_fma.cpp
src/ppl/nn/engines/x86/impls/src/ppl/kernel/x86/fp32/matmul/: matmul_fp32.cpp
src/ppl/nn/engines/x86/kernels/onnx/: concat_kernel.h  conv1d_kernel.cc  conv_kernel.cc  max_kernel.cc  min_kernel.cc  split_kernel.cc  sum_kernel.cc
src/ppl/nn/engines/x86/kernels/pmx/: reorder_kernel.cc  reorder_kernel.h
src/ppl/nn/engines/x86/optimizer/rules/: fuse_channel_shuffle.cc
src/ppl/nn/models/onnx/: graph_parser.cc  serializer.cc
src/ppl/nn/models/pmx/: deserialization_context.h  graph_parser.cc  serializer.cc
src/ppl/nn/oputils/: broadcast.h
src/ppl/nn/oputils/mmcv/: reshape_mmcv_non_max_suppression.cc
src/ppl/nn/oputils/onnx/: reshape_add.cc  reshape_and.cc  reshape_argmax.cc  reshape_argmin.cc  reshape_batch_normalization.cc  reshape_concat.cc  reshape_depth_to_space.cc  reshape_equal.cc  reshape_expand.cc  reshape_greater.cc  reshape_gru.cc  reshape_instance_normalization.cc  reshape_leaky_relu.cc  reshape_less.cc  reshape_lstm.cc  reshape_matmul.cc  reshape_non_max_suppression.cc  reshape_one_hot.cc  reshape_pad.cc  reshape_resize.cc  reshape_scatter_elements.cc  reshape_scatter_nd.cc  reshape_slice.cc  reshape_split.cc  reshape_squeeze.cc  reshape_tile.cc  reshape_transpose.cc  reshape_unsqueeze.cc
src/ppl/nn/runtime/: runtime_graph_info.h  tensor_impl.cc  tensor_impl.h
src/ppl/nn/utils/: generic_cpu_data_converter.cc  generic_cpu_data_converter.h  generic_cpu_device.cc  generic_cpu_device.h
(+18 files in other folders)
